// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h1>
</div>
`;

exports[`should render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $123,451.21
  </h1>
</div>
`;
